reference-llvm/tests/should-fail/fail3.mu
// empty function

function @entry foo() {
    
}
